HouseHogPackage/main/default/objects/Agency__c/Agency__c.object-meta.xml
<CustomObject>
    <description>Real Estate Agency Affiliation</description>
    <label>Agency</label>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>