HouseHogPackage/main/default/objects/Agency__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <description>Reference to the 18-digit ID of the Agency&apos;s primary group. Lookup relationships to Group are not allowed.</description>
    <label>GroupId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>