HouseHogPackage/main/default/objects/Agency__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Main phone number for Agency.</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>